# -lib_inter_p_com

./: CMakeLists.txt  README.md
src/: image.h  output  output.cpp  shared_memory.cpp  shared_memory.h
test/: image_test.cpp  shared_memory_test.cpp
